[package]
name = "retdec"
version = "0.1.0-prealpha"
authors = ["Petr Zemek <s3rvac@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/s3rvac/retdec-rust"
description = """A Rust library providing easy access to the retdec.com
decompilation service."""

[dependencies]
clap = "2.23.2"
error-chain = "0.10.0"
hyper = "0.9.18"
json = "0.11.6"
multipart = "0.11.0"
