[package]
name = "retdec"
version = "0.2.0-dev"
authors = ["Petr Zemek <s3rvac@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/s3rvac/retdec-rust"
repository = "https://github.com/s3rvac/retdec-rust"
documentation = "https://docs.rs/retdec"
description = """A Rust library and tools providing easy access to the
retdec.com decompilation service."""
keywords = ["retdec", "decompiler", "decompilation", "disassembler", "fileinfo"]

[dependencies]
clap = "2.24.1"
error-chain = "0.10.0"
hyper = "0.10.12"
hyper-native-tls = "0.2.4"
json = "0.11.6"
multipart = "0.12.0"
regex = "0.2.2"
unidecode = "0.3.0"

[dev-dependencies]
tempdir = "0.3.5"
